[tool.poetry]
name = "q-random-walk"
version = "0.1.0"
description = ""
authors = ["Erik Weilandt <erik.weilandt+git@gmail.com>"]
readme = "README.md"
packages = [{include = "q_random_walk"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
qiskit = {extras = ["visualization"], version = "^0.45.2"}
matplotlib = "^3.8.2"
qiskit-ibm-runtime = "^0.17.0"
qiskit-aer = "^0.13.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
